--- a/overMij/overMij.css
+++ b/overMij/overMij.css
@@ -1,6 +1,24 @@
 body {
     color: darkblue;
-    font-size: 4.5rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular',Geneva, Verdana, sans-serif;
-    font-variant: small-caps;
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+   padding-top: 15px;
+   padding-left: 30px;
 }
+
+.overmijzelf {width: 540px; }
+.vakantie {margin-left: 200px;
+margin-top: 50px;}
+.Gezin {color: darkblue;
+    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+
+ width: 300px;
+ max-height: fit-content;
+  padding: 50px;
+  margin: 20px;
+  margin-left: 300px;
+  margin-top: 50px;
+background-color: gainsboro;}
+  
+#container {display: flex;}
