--- a/overMij/overMij.css
+++ b/overMij/overMij.css
@@ -20,5 +20,10 @@ margin-top: 50px;}
   margin-left: 300px;
   margin-top: 50px;
 background-color: gainsboro;}
-  
+
+.vakantie {width: 500px;}
+
+#vakantiefoto {width: 500px; height: 300px;}
+
+
 #container {display: flex;}
