--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -1,33 +1,54 @@
 html, body {
     padding: 0;
     margin: 0;
+    background-color: lightsteelblue;
 }
 
-body {
-    background: #dcebff;
+
+.navigatiebalk {
     color: #2e2e2d;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    size: 14px;
-    padding-left: 10%;
+    font-weight: bold;
+    font-size: 15px;
+    margin: 15px;
+    padding: 20px 40px;
+    border-radius: 20px; 
+}
+
+
+.navigatiebalk:hover {
+    background-color: rgb(0, 68, 255);
 }
 
 a {
     text-decoration: none;
 }
 
-.navigatiebalk {
-    color: #2e2e2d;
-    font-size: 15px;
-    margin: 15px;
-    background-color: aqua;
-    text-align: center;
-    padding: 20px 40px;
-    text-decoration: none;
-    border-radius: 20px;
-    ;
-}
 
 #containernavigatiebalk {
-    display: flex;
+    display: flex; 
 }
 
+
+#containerwelkomtekst {
+    background-color: blueviolet;
+    margin: 15px;
+    height: 600px;
+    width: 98%;
+    border-radius: 10px; 
+}
+
+#containerfoto img{
+    height: 600px;
+    width: 100%;
+    object-fit: cover;
+}
+
+#flachaulogo {
+    height: 57.6px;
+    width: auto;
+    padding: 0px;
+}
+
+#homebutton {
+    margin: 15px;
+}
