--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -1,12 +1,13 @@
 html, body {
     padding: 0;
     margin: 0;
-    background-color: lightsteelblue;
+    background-color: #E6F2FF;
 }
 
 
 .navigatiebalk {
-    color: #2e2e2d;
+    color: #1E293B;
+    font-family: montserrat;
     font-weight: bold;
     font-size: 15px;
     margin: 15px;
@@ -14,9 +15,16 @@ html, body {
     border-radius: 20px; 
 }
 
+.Homepageinfoblokken {
+    background-color: rgb(236, 192, 234);
+    height: 400px;
+    width: 98%;
+    margin: 20px;
+    border-radius: 10px;
+}
 
 .navigatiebalk:hover {
-    background-color: rgb(0, 68, 255);
+    background-color: #cbd9ee;
 }
 
 a {
@@ -24,15 +32,22 @@ a {
 }
 
 
-#containernavigatiebalk {
+.containers {
     display: flex; 
 }
 
+#containerkaart {
+    background-color: #93C6EB;
+    margin: 15px ;
+    height: 500px;
+    width: 98%;
+    border-radius: 10px;
+}
 
 #containerwelkomtekst {
-    background-color: blueviolet;
+    background-color: #93C6EB;
     margin: 15px;
-    height: 600px;
+    height: 300px;
     width: 98%;
     border-radius: 10px; 
 }
