--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -13,6 +13,11 @@ h2 {
     font-size: 35px;
 }
 
+h4 {
+    font-size: 15px;
+    margin-right: 4px;
+}
+
 p {
     font-size: 18px;
 }
@@ -68,32 +73,53 @@ p {
 }
 
 .pistekaartmetinfo {
-    background-color: blueviolet;
-    height: 95%;
     width: 48%;
-    margin: 15px auto;
-    display: block;
+    height: 450px;
+    margin: 15px;
+}
+
+.icons {
+    height: 30px;
+    margin-right: 10px;
 }
 
 .infokaart {
-    background-color: black;
-    width: 100%;
-    height: 100%; 
-    margin: 10px auto;
+    height: 55px;
+    padding-left: 15px;
+    border-radius: 7.5px;
+    display: flex;
+    align-items: center;
+}
+
+.pistekleurtekst {
+    font-size: 15px;
+    font-weight: bold;
+    color: rgb(228, 243, 255);
 }
 
 #infokaart1 {
     margin-top: 0px;
-}
+    color: #1E293B;
+    font-size: 20px;
+    font-weight: bold;
+ }
 
-#infokaart7 {
-    margin-bottom: 0px;
-}
+#infokaart2 {
+    background-color: #5DADE2;
+} 
+
+#infokaart3 {
+    background-color: #E74C3C;
+} 
+
+#infokaart4 {
+    background-color: #2E2E2E;
+} 
+
 
 #pistekaart {
-    max-height: 100%;
-    max-width: 100%;
-    margin: auto;
+    height: 450px;
+    width: 900px;
 }
 
 #containerkaart {
@@ -103,7 +129,8 @@ p {
     border-radius: 10px;
 }
 
-#containerinfokaart {
+#containerinfobijkaart {
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
