--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -117,6 +117,11 @@ p {
     text-align: center;
 }
 
+.blokkenskien {
+    height: 400px;
+    width: 300px;
+}
+
 .standaardcontainer {
     width: 98%;
     border-radius: 10px;
@@ -125,10 +130,20 @@ p {
     margin: 15px auto 15px;
 }
 
+.blokkenskien {
+    background-color: #E74C3C;
+    height: 500px;
+    width: 300px;
+}
+
 .containertekstinleiding {
     margin: 20px auto 5px; 
     text-align: center;
     padding: 2px  0px 15px 0px;
+}
+
+.bannertekstskien {
+    text-align: center;
 }
 
 .containerfoto img {
@@ -179,14 +194,22 @@ p {
     margin: 5px auto 15px;
 }
 
-#containerfotohomepage img{
+#containerfotohomepage img {
     height: 580px;
+}
 
+
+/* andere manier van blokken naast elkaar zetten mogelijk ook gebruiken voor homepage */
+
+#containerblokskien {
+    justify-content: space-between;
+    margin: 20px;
+    
 }
 
 #containerfotoskien img {
-    height: 300px;
-    object-position: 100% 72%;
+    height: 500px;
+    object-position: 100% 75%;
 }
 
 #flachaulogo {
