--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -84,7 +84,7 @@ p {
 }
 
 .iconsskien {
-    height: 200px;
+    height: 100px;
 }
 
 .infokaart {
@@ -93,6 +93,19 @@ p {
     border-radius: 7.5px;
     display: flex;
     align-items: center;
+}
+
+.blokskienhoofdtekst {
+    background-color: aqua;
+    height: 60px;
+    padding: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    align-items: center;
+}
+
+.blokskientekst {
+
 }
 
 .pistekleurtekst {
@@ -117,11 +130,6 @@ p {
     text-align: center;
 }
 
-.blokkenskien {
-    height: 400px;
-    width: 300px;
-}
-
 .standaardcontainer {
     width: 98%;
     border-radius: 10px;
@@ -133,7 +141,8 @@ p {
 .blokkenskien {
     background-color: #E74C3C;
     height: 500px;
-    width: 300px;
+    width: 600px;
+    border-radius: 7.5px;
 }
 
 .containertekstinleiding {
@@ -143,7 +152,7 @@ p {
 }
 
 .bannertekstskien {
-    text-align: center;
+    position: absolute;
 }
 
 .containerfoto img {
@@ -196,20 +205,29 @@ p {
 
 #containerfotohomepage img {
     height: 580px;
+    box-shadow: 0px 5px 14px 0px rgba(0,0,0,0.25);
 }
 
 
-/* andere manier van blokken naast elkaar zetten mogelijk ook gebruiken voor homepage */
+/* andere manier van blokken naast elkaar zetten mogelijk ook gebruiken voor homepage (container moet flexbol colum zijn) */
 
 #containerblokskien {
     justify-content: space-between;
     margin: 20px;
-    
 }
 
 #containerfotoskien img {
-    height: 500px;
+    height: 450px;
     object-position: 100% 75%;
+    filter: brightness(70%);
+}
+
+#containerfotoskien {
+    position: relative;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: #E6F2FF;
 }
 
 #flachaulogo {
