--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -32,7 +32,7 @@ p {
 }
 
 .Homepageinfoblokken {
-    background-color: rgb(236, 192, 234);
+    background-color: #93C6EB;
     height: 400px;
     width: 98%;
     margin: 20px;
@@ -47,10 +47,10 @@ p {
     display: flex; 
 }
 
-.plaatjeinfoblok {
-    background: black;
+.plaatjeinfoblok img {
+    object-fit: cover;
     height: 180px;
-    width: 100%;
+    width: 341px;
     border-radius: 10px 10px 0px 0px;
 }
 
@@ -61,7 +61,7 @@ p {
 }
 
 .knopinfoblok {
-    background-color: #93C6EB;
+    background-color: #E6F2FF;
     color: #1E293B;
     font-weight: bold;
     text-align: center;
@@ -96,7 +96,6 @@ p {
 }
 
 .blokskienhoofdtekst {
-    background-color: aqua;
     height: 60px;
     padding: 50px;
     font-size: 25px;
@@ -105,7 +104,10 @@ p {
 }
 
 .blokskientekst {
-
+    padding: 10px 50px 25px 50px;
+    color: #1E293B;
+    font-size: 20px;
+    height: 75px;
 }
 
 .pistekleurtekst {
@@ -139,10 +141,31 @@ p {
 }
 
 .blokkenskien {
-    background-color: #E74C3C;
-    height: 500px;
+    background-color: #93C6EB;
+    height: 450px;
     width: 600px;
-    border-radius: 7.5px;
+    border-radius: 8px;
+}
+
+.blokskienknop:hover {
+    background-color: #6d0307;
+}
+
+.blokskienknop {
+    background-color: #E31C23;
+    text-align: center;
+    width: 300px;
+    color: #E6F2FF;
+    padding: 20px;
+    border-radius: 12px;
+    margin-bottom: 15px;
+    font-weight: bold;
+    box-shadow: 0px 5px 14px 0px rgba(0,0,0,0.25);
+}
+
+.containerblokskienknop {
+    flex-direction: column;
+    align-items: center;
 }
 
 .containertekstinleiding {
@@ -220,6 +243,7 @@ p {
     height: 450px;
     object-position: 100% 75%;
     filter: brightness(70%);
+    box-shadow: 0px 5px 14px 0px rgba(0,0,0,0.25);
 }
 
 #containerfotoskien {
@@ -243,7 +267,9 @@ p {
 #footerlijn {
     height: 3px;
     background-color: #E31C23;
+    box-shadow:  1px 0px 10px 3px rgba(0, 0, 0, 0.25);
 }
+
 
 #footertekst {
     background-color: #1E293B;
