--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -63,6 +63,7 @@ p {
 }
 
 .tekstinfoblok {
+    margin-top: 4px;
     padding: 15px;
     height: 90px;
     width: 300px;
@@ -93,6 +94,45 @@ p {
 .iconskaart {
     height: 30px;
     margin-right: 10px;
+}
+
+.lijnaccomodaties {
+    margin: 20px;
+    height: 225px;
+    width: 3px;
+    background-color: #5496c2;
+}
+
+.logosaccomodaties {
+    height: 50px;
+    margin: 15px;
+}
+
+.tekstblokaccomodaties {
+    height: 45px;
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.containerlogoaccomodaties {
+    justify-content: center;
+}
+
+.knopaccomodaties {
+    background-color: #e31c23f6;
+    color: #1E293B;
+    padding: 20px;
+    width: 200px;
+    margin: 10px auto 10px auto;
+    border-radius: 7.5px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.knopaccomodaties:hover {
+    background-color: #8e2529f6;
 }
 
 .iconsskien {
@@ -194,6 +234,11 @@ p {
     text-align: center;
 }
 
+.containerblokkendorpen {
+    justify-content: space-around;
+    margin: 25px 0px 25px 0px;
+}
+
 .containertekstinleiding {
     margin: 20px auto 5px; 
     text-align: center;
@@ -202,6 +247,12 @@ p {
 
 .bannertekstskien {
     position: absolute;
+}
+
+.blokaccomodaties {
+    height: 250px;
+    width: 400px;
+    margin: 20px;
 }
 
 .containerfoto img {
@@ -293,11 +344,6 @@ p {
     box-shadow: 0px 5px 14px 0px rgba(0,0,0,0.25);
 }
 
-.containerblokkendorpen {
-    justify-content: space-around;
-    margin: 25px 0px 25px 0px;
-}
-
 #containerinfobijkaart {
     display: flex;
     flex-direction: column;
@@ -350,15 +396,41 @@ p {
     margin: 15px;
 }
 
+#containertekstaccomodaties {
+    text-align: center;
+    padding: 40px;
+    font-size: 18px;
+    height: 100px;
+}
+
+#containerblokkenaccomodaties {
+    height: 280px;
+    justify-content: space-around;
+}
+
+#containerfotoaccomodaties {
+    position: relative;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    color: #E6F2FF;
+}
+
+#containerfotoaccomodaties img {
+    height: 500px;
+    filter: brightness(60%);
+    box-shadow: 0px 5px 14px 0px rgba(0,0,0,0.25);
+}
+
 #footerlijn {
     height: 3px;
     background-color: #E31C23;
     box-shadow:  1px 0px 10px 3px rgba(0, 0, 0, 0.25);
 }
 
-
 #footertekst {
     background-color: #1E293B;
     text-align: center;
     padding: 15px;
 }
+
