--- a/PO/css/vormgeving.css
+++ b/PO/css/vormgeving.css
@@ -96,19 +96,19 @@ p {
     margin-right: 10px;
 }
 
-.lijnaccomodaties {
+.lijnAccommodaties {
     margin: 20px;
     height: 225px;
     width: 3px;
     background-color: #5496c2;
 }
 
-.logosaccomodaties {
+.logosAccommodaties {
     height: 50px;
     margin: 15px;
 }
 
-.tekstblokaccomodaties {
+.tekstblokAccommodaties {
     height: 45px;
     padding: 15px;
     text-align: center;
@@ -116,11 +116,11 @@ p {
     font-weight: 600;
 }
 
-.containerlogoaccomodaties {
+.containerlogoAccommodaties {
     justify-content: center;
 }
 
-.knopaccomodaties {
+.knopAccommodaties {
     background-color: #e31c23f6;
     color: #1E293B;
     padding: 20px;
@@ -131,7 +131,7 @@ p {
     font-weight: 600;
 }
 
-.knopaccomodaties:hover {
+.knopAccommodaties:hover {
     background-color: #8e2529f6;
 }
 
@@ -249,7 +249,7 @@ p {
     position: absolute;
 }
 
-.blokaccomodaties {
+.blokAccommodaties {
     height: 250px;
     width: 400px;
     margin: 20px;
@@ -396,19 +396,19 @@ p {
     margin: 15px;
 }
 
-#containertekstaccomodaties {
+#containertekstAccommodaties {
     text-align: center;
     padding: 40px;
     font-size: 18px;
     height: 100px;
 }
 
-#containerblokkenaccomodaties {
+#containerblokkenAccommodaties {
     height: 280px;
     justify-content: space-around;
 }
 
-#containerfotoaccomodaties {
+#containerfotoAccommodaties {
     position: relative;
     text-align: center;
     justify-content: center;
@@ -416,7 +416,7 @@ p {
     color: #E6F2FF;
 }
 
-#containerfotoaccomodaties img {
+#containerfotoAccommodaties img {
     height: 500px;
     filter: brightness(60%);
     box-shadow: 0px 5px 14px 0px rgba(0,0,0,0.25);
